k8s/components/apps/n8n/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n
    spec:
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
            # Uncomment the next line to enable debugging with Node.js inspector
            # - sleep 5; node --inspect=0.0.0.0:9229 $(which n8n) start
          image: n8nio/n8n
          name: n8n
          ports:
            - containerPort: 5678
            # Uncomment the next line to enable debugging with Node.js inspector
            # - containerPort: 9229
          resources:
            requests:
              cpu: "150m"
              memory: "250Mi"
            limits:
              cpu: "350m"
              memory: "500Mi"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-claim0
      restartPolicy: Always
      volumes:
        - name: n8n-claim0
          persistentVolumeClaim:
            claimName: pvc-n8n-claim0
        - name: n8n-secret
          secret:
            secretName: n8n-secret
        - name: postgres-secret
          secret:
            secretName: postgres-secret
