k8s/components/apps/n8n/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  type: ClusterIP
  selector:
    service: n8n
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
